Fix mkdir of tmp in case of != lncs

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -25,12 +25,12 @@ jobs:
         run: |
            mkdir tmp
            [[ $LLNCS_CLS ]] && echo "$LLNCS_CLS" > tmp/llncs.cls
-           ls -la tmp
         shell: bash
         env:
           LLNCS_CLS: ${{secrets.LLNCS_CLS}}
       - name: Generate template
         run: |
+          mkdir -p tmp
           cd tmp
           npx yo $GITHUB_WORKSPACE\
            --documentclass=lncs\
@@ -79,12 +79,12 @@ jobs:
         run: |
            mkdir tmp
            [[ $LLNCS_CLS ]] && echo "$LLNCS_CLS" > tmp/llncs.cls
-           ls -la tmp
         shell: bash
         env:
           LLNCS_CLS: ${{secrets.LLNCS_CLS}}
       - name: Generate template
         run: |
+          mkdir -p tmp
           cd tmp
           npx yo $GITHUB_WORKSPACE\
            --documentclass=lncs\
@@ -131,6 +131,7 @@ jobs:
       - run: npm install
       - name: Generate template
         run: |
+          mkdir -p tmp
           cd tmp
           npx yo $GITHUB_WORKSPACE\
            --documentclass=scientific-thesis\
@@ -177,6 +178,7 @@ jobs:
       - run: npm install
       - name: Generate template
         run: |
+          mkdir -p tmp
           cd tmp
           npx yo $GITHUB_WORKSPACE\
            --documentclass=scientific-thesis\
