Cancel previous runs

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -15,6 +15,10 @@ jobs:
         todo: [pdfcomment, none]
         examples: [true, false]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.8.0
+        with:
+          access_token: ${{ github.token }}
       - name: Set up Git repository
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -69,6 +73,10 @@ jobs:
         todo: [pdfcomment, none]
         examples: [true, false]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.8.0
+        with:
+          access_token: ${{ github.token }}
       - name: Set up Git repository
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -123,6 +131,10 @@ jobs:
         todo: [pdfcomment, none]
         examples: [true, false]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.8.0
+        with:
+          access_token: ${{ github.token }}
       - name: Set up Git repository
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -170,6 +182,10 @@ jobs:
         todo: [pdfcomment, none]
         examples: [true, false]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.8.0
+        with:
+          access_token: ${{ github.token }}
       - name: Set up Git repository
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
