--- a/package.json
+++ b/package.json
@@ -21,23 +21,25 @@
   ],
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-config-xo": "^0.29.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
-    "jest": "^25.5.1",
-    "lint-staged": "^10.2.0",
-    "prettier": "^2.0.5",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
+    "jest": "^25.5.4",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^2.4.1"
+    "yeoman-test": "^2.7.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "chalk": "^4.0.0",
+    "basic-ftp": "^4.6.3",
+    "chalk": "^4.1.0",
     "minimist": "^1.2.5",
-    "yeoman-generator": "^4.9.0",
+    "unzipper": "^0.10.11",
+    "yeoman-generator": "^4.13.0",
     "yeoman-option-or-prompt": "^2.0.1",
     "yosay": "^2.0.2"
   },
