Really update workflows

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -54,7 +54,7 @@ jobs:
         env:
           yeoman_test: true
       - name: latexmk
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@latest
         with:
           root_file: main.tex
           # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
@@ -112,7 +112,7 @@ jobs:
         env:
           yeoman_test: true
       - name: latexmk
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@latest
         with:
           root_file: main.tex
           # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
@@ -163,7 +163,7 @@ jobs:
         env:
           yeoman_test: true
       - name: latexmk
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@latest
         with:
           root_file: main.tex
           # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
@@ -214,7 +214,7 @@ jobs:
         env:
           yeoman_test: true
       - name: latexmk
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@latest
         with:
           root_file: main.tex
           # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
