--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14'
       - run: npm install
       - name: Create llncs.cls
         run: |
@@ -81,7 +81,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14'
       - run: npm install
       - name: Create llncs.cls
         run: |
@@ -139,7 +139,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14'
       - run: npm install
       - name: Generate template
         run: |
@@ -190,7 +190,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14'
       - run: npm install
       - name: Generate template
         run: |
