Refine support for siunitx by adding texlive 2021

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -40,7 +40,7 @@ jobs:
            --documentclass=lncs\
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
-           --texlive=tl2019\
+           --texlive=2021\
            --language==${{ matrix.language }}\
            --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
@@ -98,7 +98,7 @@ jobs:
            --documentclass=lncs\
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
-           --texlive=tl2019\
+           --texlive=2021\
            --language==${{ matrix.language }}\
            --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
@@ -149,7 +149,7 @@ jobs:
            --documentclass=scientific-thesis\
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
-           --texlive=tl2019\
+           --texlive=2021\
            --language==${{ matrix.language }}\
            --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
@@ -200,7 +200,7 @@ jobs:
            --documentclass=scientific-thesis\
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
-           --texlive=tl2019\
+           --texlive=2021\
            --language==${{ matrix.language }}\
            --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
