--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14'
       - run: npm install
       - name: Create llncs.cls
         run: |
@@ -40,7 +40,7 @@ jobs:
            --documentclass=lncs\
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
-           --texlive=tl2019\
+           --texlive=2021\
            --language==${{ matrix.language }}\
            --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
@@ -54,7 +54,7 @@ jobs:
         env:
           yeoman_test: true
       - name: latexmk
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@edge
         with:
           root_file: main.tex
           # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
@@ -81,7 +81,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14'
       - run: npm install
       - name: Create llncs.cls
         run: |
@@ -98,7 +98,7 @@ jobs:
            --documentclass=lncs\
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
-           --texlive=tl2019\
+           --texlive=2021\
            --language==${{ matrix.language }}\
            --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
@@ -112,7 +112,7 @@ jobs:
         env:
           yeoman_test: true
       - name: latexmk
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@edge
         with:
           root_file: main.tex
           # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
@@ -139,7 +139,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14'
       - run: npm install
       - name: Generate template
         run: |
@@ -149,7 +149,7 @@ jobs:
            --documentclass=scientific-thesis\
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
-           --texlive=tl2019\
+           --texlive=2021\
            --language==${{ matrix.language }}\
            --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
@@ -163,7 +163,7 @@ jobs:
         env:
           yeoman_test: true
       - name: latexmk
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@edge
         with:
           root_file: main.tex
           # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
@@ -190,7 +190,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
+          node-version: '14'
       - run: npm install
       - name: Generate template
         run: |
@@ -200,7 +200,7 @@ jobs:
            --documentclass=scientific-thesis\
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
-           --texlive=tl2019\
+           --texlive=2021\
            --language==${{ matrix.language }}\
            --font=${{ matrix.font }}\
            --listings==${{ matrix.listings }}\
@@ -214,7 +214,7 @@ jobs:
         env:
           yeoman_test: true
       - name: latexmk
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@edge
         with:
           root_file: main.tex
           # ${{ github.workspace }} holds wrong directory (only valid for "run" tasks, not for container-based tasks)
