Refine launch.json to include all parameters

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,20 @@
             "program": "C:\\Program Files\\nodejs\\node_modules\\npm\\bin\\npx-cli.js",
             "args": [
               "yo",
-              "${workspaceFolder}"
+              "${workspaceFolder}",
+              "--githubpublish",
+              "--texlive=2021",
+              "--documentclass=lncs",
+              "--latexcompiler=pdflatex",
+              "--bibtextool=bibtex",
+              "--language=en",
+              "--font=default",
+              "--listings=listings",
+              "--cleveref=true",
+              "--enquotes=csquotes",
+              "--tweak_outerquote=babel",
+              "--todo=pdfcomment",
+              "--examples=true"
             ],
             "console": "externalTerminal",
             "disableOptimisticBPs": true,
