Use integrated terminal

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,7 @@
               "--todo=pdfcomment",
               "--examples=true"
             ],
-            "console": "externalTerminal",
+            "console": "integratedTerminal",
             "disableOptimisticBPs": true,
             "stopOnEntry": false
         }
