One more launch configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Generator",
+            "name": "lncs-pdflatex-bibtex-en-cm-listings",
             "type": "node",
             "request": "launch",
             "cwd": "c:\\temp\\ltg",
@@ -30,6 +30,37 @@
             "console": "integratedTerminal",
             "disableOptimisticBPs": true,
             "stopOnEntry": false
+        },
+        {
+            "name": "lncs-pdflatex-bibtex-en-cm-minted",
+            "type": "node",
+            "request": "launch",
+            "cwd": "c:\\temp\\ltg",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "C:\\Program Files\\nodejs\\node_modules\\npm\\bin\\npx-cli.js",
+            "args": [
+              "yo",
+              "${workspaceFolder}",
+              "--githubpublish",
+              "--texlive=2021",
+              "--documentclass=lncs",
+              "--latexcompiler=pdflatex",
+              "--bibtextool=bibtex",
+              "--language=en",
+              "--font=default",
+              "--listings=minted",
+              "--cleveref=true",
+              "--enquotes=csquotes",
+              "--tweak_outerquote=babel",
+              "--todo=pdfcomment",
+              "--examples=true"
+            ],
+            "console": "integratedTerminal",
+            "disableOptimisticBPs": true,
+            "stopOnEntry": false
         }
+
     ]
 }
