--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -58,6 +58,19 @@ jobs:
         env:
           yeoman_test: true
         if: ${{ steps.createllncs.outputs.lncsclspresent }}
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
+        if: ${{ matrix.listings == 'minted' }}
+      - name: Install pygments
+        run: |
+          python -m pip install --upgrade pip
+          pip install pygments
+        if: ${{ matrix.listings == 'minted' }}
       - name: latexmk
         uses: dante-ev/latex-action@edge
         with:
@@ -122,6 +135,19 @@ jobs:
         env:
           yeoman_test: true
         if: ${{ steps.createllncs.outputs.lncsclspresent }}
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
+        if: ${{ matrix.listings == 'minted' }}
+      - name: Install pygments
+        run: |
+          python -m pip install --upgrade pip
+          pip install pygments
+        if: ${{ matrix.listings == 'minted' }}
       - name: latexmk
         uses: dante-ev/latex-action@edge
         with:
@@ -172,6 +198,19 @@ jobs:
            --examples=${{ matrix.examples }}
         env:
           yeoman_test: true
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
+        if: ${{ matrix.listings == 'minted' }}
+      - name: Install pygments
+        run: |
+          python -m pip install --upgrade pip
+          pip install pygments
+        if: ${{ matrix.listings == 'minted' }}
       - name: latexmk
         uses: dante-ev/latex-action@edge
         with:
@@ -221,6 +260,19 @@ jobs:
            --examples=${{ matrix.examples }}
         env:
           yeoman_test: true
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
+        if: ${{ matrix.listings == 'minted' }}
+      - name: Install pygments
+        run: |
+          python -m pip install --upgrade pip
+          pip install pygments
+        if: ${{ matrix.listings == 'minted' }}
       - name: latexmk
         uses: dante-ev/latex-action@edge
         with:
