--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -47,9 +47,9 @@ jobs:
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
            --texlive=2021\
-           --language==${{ matrix.language }}\
+           --language=${{ matrix.language }}\
            --font=${{ matrix.font }}\
-           --listings==${{ matrix.listings }}\
+           --listings=${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
            --tweak_outerquote=${{ matrix.tweak_outerquote }}\
@@ -124,9 +124,9 @@ jobs:
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
            --texlive=2021\
-           --language==${{ matrix.language }}\
+           --language=${{ matrix.language }}\
            --font=${{ matrix.font }}\
-           --listings==${{ matrix.listings }}\
+           --listings=${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
            --tweak_outerquote=${{ matrix.tweak_outerquote }}\
@@ -188,9 +188,9 @@ jobs:
            --latexcompiler=pdflatex\
            --bibtextool=bibtex\
            --texlive=2021\
-           --language==${{ matrix.language }}\
+           --language=${{ matrix.language }}\
            --font=${{ matrix.font }}\
-           --listings==${{ matrix.listings }}\
+           --listings=${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
            --tweak_outerquote=${{ matrix.tweak_outerquote }}\
@@ -250,9 +250,9 @@ jobs:
            --latexcompiler=lualatex\
            --bibtextool=bibtex\
            --texlive=2021\
-           --language==${{ matrix.language }}\
+           --language=${{ matrix.language }}\
            --font=${{ matrix.font }}\
-           --listings==${{ matrix.listings }}\
+           --listings=${{ matrix.listings }}\
            --cleveref=${{ matrix.cleveref }}\
            --enquotes=${{ matrix.enquotes }}\
            --tweak_outerquote=${{ matrix.tweak_outerquote }}\
