Update workflow names

--- a/.github/workflows/check-scientific-thesis-lualatex-bibtex.yml
+++ b/.github/workflows/check-scientific-thesis-lualatex-bibtex.yml
@@ -1,4 +1,4 @@
-name: Check scientific-thesis
+name: Check scientific-thesis-lualatex-bibtex
 on: [push]
 jobs:
   scientific-thesis-lualatex-bibtex:
