--- a/.github/workflows/check-scientific-thesis-pdflatex-bibtex.yml
+++ b/.github/workflows/check-scientific-thesis-pdflatex-bibtex.yml
@@ -1,4 +1,4 @@
-name: Check scientific-thesis
+name: Check scientific-thesis-pdflatex-bibtex
 on: [push]
 jobs:
   scientific-thesis-pdflatex-bibtex:
