--- a/.github/workflows/check-lncs-pdflatex-bibtex.yml
+++ b/.github/workflows/check-lncs-pdflatex-bibtex.yml
@@ -1,7 +1,7 @@
 name: Check lncs-pdflatex-bibtex
 on: [push]
 jobs:
-  lncs-pdflatex-bibtex:
+  check:
     runs-on: ubuntu-latest
     steps:
       - name: Cancel Previous Runs
