--- a/.github/workflows/check-scientific-thesis-lualatex-bibtex.yml
+++ b/.github/workflows/check-scientific-thesis-lualatex-bibtex.yml
@@ -1,7 +1,7 @@
 name: Check scientific-thesis-lualatex-bibtex
 on: [push]
 jobs:
-  scientific-thesis-lualatex-bibtex:
+  check:
     runs-on: ubuntu-latest
     steps:
       - name: Cancel Previous Runs
