--- a/.github/workflows/check-lncs-lualatex-bibtex.yml
+++ b/.github/workflows/check-lncs-lualatex-bibtex.yml
@@ -54,6 +54,8 @@ jobs:
            --tweak_outerquote=babel\
            --todo=pdfcomment\
            --examples=true
+          pwd
+          ls -la
         env:
           yeoman_test: true
         if: ${{ steps.lncsclspresent.outputs.lncsclspresent }}
