Upload generated PDFs as build artifacts

--- a/.github/workflows/check-acmart-pdflatex-bibtex-false.yml
+++ b/.github/workflows/check-acmart-pdflatex-bibtex-false.yml
@@ -7971,3 +7971,9 @@ jobs:
           # See https://github.community/t/how-can-i-access-the-current-repo-context-and-files-from-a-docker-container-action/17711/2?u=koppor for details
           working_directory: '/github/workspace/acmart_pdflatex_bibtex_de_times_minted_false_plainlatex_outerquote_none_false_false'
           root_file: main.tex
+      - uses: actions/upload-artifact@v2
+        with:
+          name: pdfs
+          path: |
+            **/main.pdf
+            **/paper.pdf
