--- a/.github/workflows/check-lncs-lualatex-bibtex-true.yml
+++ b/.github/workflows/check-lncs-lualatex-bibtex-true.yml
@@ -8483,3 +8483,9 @@ jobs:
           working_directory: '/github/workspace/lncs_lualatex_bibtex_de_times_minted_false_plainlatex_outerquote_none_true_false'
           root_file: paper.tex
         if: ${{ steps.lncsclspresent.outputs.lncsclspresent }}
+      - uses: actions/upload-artifact@v2
+        with:
+          name: pdfs
+          path: |
+            **/main.pdf
+            **/paper.pdf
