--- a/.github/workflows/check-ieee-peerreview-letter-lualatex-bibtex-true.yml
+++ b/.github/workflows/check-ieee-peerreview-letter-lualatex-bibtex-true.yml
@@ -2211,3 +2211,9 @@ jobs:
           working_directory: '/github/workspace/ieee_lualatex_bibtex_en_default_minted_false_plainlatex_outerquote_none_true_false'
           root_file: paper.tex
         if: ${{ steps.lncsclspresent.outputs.lncsclspresent }}
+      - uses: actions/upload-artifact@v2
+        with:
+          name: pdfs
+          path: |
+            **/main.pdf
+            **/paper.pdf
