run-on -> runs-on

--- a/.github/workflows/check-lncs-2019.yml
+++ b/.github/workflows/check-lncs-2019.yml
@@ -2,7 +2,7 @@ name: Check lncs on TeXLive 2019
 on: [push]
 jobs:
   check:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
