--- a/.github/workflows/check-scientific-thesis-2019.yml
+++ b/.github/workflows/check-scientific-thesis-2019.yml
@@ -2,7 +2,7 @@ name: Check scientific-thesis on TeXLive 2019
 on: [push]
 jobs:
   check:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
