--- a/.github/workflows/check-acmart-2021.yml
+++ b/.github/workflows/check-acmart-2021.yml
@@ -5,6 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        latexcompiler: [pdflatex]
+        bibtextool: [bibtex]
+        examples: [true]
+        acm_format: [manuscript]
+        acm_review: [true]
+        papersize: [a4]
+        ieee_variant: [conference]
         include:
           - latexcompiler: pdflatex
             bibtextool: bibtex
