--- a/.github/workflows/check-lncs-2021.yml
+++ b/.github/workflows/check-lncs-2021.yml
@@ -5,6 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        latexcompiler: [pdflatex]
+        bibtextool: [bibtex]
+        examples: [true]
+        acm_format: [manuscript]
+        acm_review: [true]
+        papersize: [a4]
+        ieee_variant: [conference]
         include:
           - latexcompiler: pdflatex
             bibtextool: bibtex
@@ -17,79 +24,9 @@ jobs:
             bibtextool: bibtex
             examples: true
             acm_format: manuscript
-            acm_review: true
-            papersize: a4
-            ieee_variant: journal
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: true
-            papersize: a4
-            ieee_variant: peerreview
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: conference
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: journal
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: peerreview
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
             acm_review: false
             papersize: a4
             ieee_variant: conference
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: a4
-            ieee_variant: journal
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: a4
-            ieee_variant: peerreview
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: conference
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: journal
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: peerreview
           - latexcompiler: pdflatex
             bibtextool: bibtex
             examples: true
@@ -171,79 +108,9 @@ jobs:
             bibtextool: bibtex
             examples: false
             acm_format: manuscript
-            acm_review: true
-            papersize: a4
-            ieee_variant: journal
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: true
-            papersize: a4
-            ieee_variant: peerreview
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: conference
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: journal
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: peerreview
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
             acm_review: false
             papersize: a4
             ieee_variant: conference
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: a4
-            ieee_variant: journal
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: a4
-            ieee_variant: peerreview
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: conference
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: journal
-          - latexcompiler: pdflatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: peerreview
           - latexcompiler: pdflatex
             bibtextool: bibtex
             examples: false
@@ -325,79 +192,9 @@ jobs:
             bibtextool: bibtex
             examples: true
             acm_format: manuscript
-            acm_review: true
-            papersize: a4
-            ieee_variant: journal
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: true
-            papersize: a4
-            ieee_variant: peerreview
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: conference
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: journal
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: peerreview
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
             acm_review: false
             papersize: a4
             ieee_variant: conference
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: a4
-            ieee_variant: journal
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: a4
-            ieee_variant: peerreview
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: conference
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: journal
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: true
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: peerreview
           - latexcompiler: lualatex
             bibtextool: bibtex
             examples: true
@@ -479,79 +276,9 @@ jobs:
             bibtextool: bibtex
             examples: false
             acm_format: manuscript
-            acm_review: true
-            papersize: a4
-            ieee_variant: journal
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: true
-            papersize: a4
-            ieee_variant: peerreview
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: conference
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: journal
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: true
-            papersize: letter
-            ieee_variant: peerreview
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
             acm_review: false
             papersize: a4
             ieee_variant: conference
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: a4
-            ieee_variant: journal
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: a4
-            ieee_variant: peerreview
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: conference
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: journal
-          - latexcompiler: lualatex
-            bibtextool: bibtex
-            examples: false
-            acm_format: manuscript
-            acm_review: false
-            papersize: letter
-            ieee_variant: peerreview
           - latexcompiler: lualatex
             bibtextool: bibtex
             examples: false
