--- a/.github/workflows/check-scientific-thesis-2021.yml
+++ b/.github/workflows/check-scientific-thesis-2021.yml
@@ -1,5 +1,8 @@
 name: Check scientific-thesis on TeXLive 2021
 on: [push]
+concurrency:
+  group: check
+  cancel-in-progress: true
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -783,10 +786,6 @@ jobs:
             papersize: a4
             ieee_variant: conference
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.8.0
-        with:
-          access_token: ${{ github.token }}
       - name: Set up Git repository
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
